added work details
Modified some work details and about me.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Welcome</h1>
-								<p>Thanks for visiting me. You can visit the following sub-section for further details. <a href="https://twitter.com/uptscs">Upendra</a><br />
+								<p>Hi, I am Upendra. I like building things and meeting new people. Get in touch: <a href="https://twitter.com/uptscs">Upendra</a><br />
 								</p>
 							</div>
 						</div>
@@ -40,16 +39,88 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
+								<h2 class="major">Developer</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>iOS application developer, I love exploring the challenges and finding solutions of it.</p>
+								<p>
+									I like to improve my problem solving skills, so get in touch if you are looking for the solutions.
+								</p>
+								<p>When I am not making magic on my desk, you're likely to find me perfecting my aim at Snooker/Pool table OR playing 'Table Tennis'. I like to hangout with awesome developers from the different teams and learn from them or just hangout.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Worked in different industries and building some of my own solutions.</p>
+								<p>Over the last 10 years I have worked with Startups and MNCs, developing iOS applications.</p>
+								<p>
+									<b>2015-2018:</b> <a href="https://www.oracle.com/in/index.html">Oracle</a>
+									<ul>
+									  <li>Re-factored and re-implemented <a href="https://github.com/pushio/PushIOManager_iOS">iOS Push SDK</a></li>
+									  <li>Architect and implemented Dependency Injection, Singleton and Factory appropriately, mastered multithreading, optimized SDK performance and its memory footprints. </li>
+									  <li>Documented the <a href="https://docs.oracle.com/cloud/latest/marketingcs_gs/OMCFB/ios/">SDK features.</a> </li>
+									  <li>On-boarded iOS developer.</li>
+									  <li>Debug the developer issues on call support.</li>
+									  <li>#WWDC18 at San Jose.</li>
+									  <li>#WWDC17 at San Jose.</li>
+									</ul>
+								</p>
+								<p>
+									<b>2014-2015:</b> <a href="https://www.happiestminds.com">Happiest Minds</a>
+									<ul>
+										<li>Integrated the Objective-C components to C++ 3D rendering engines.</li>
+										<li>Developed iOS application which allows user to construct the 3D view rooms and add furniture to it: <a href="https://techcrunch.com/tag/loft-nedsense/">LOFT</a>.</li>
+										<li>Worked on <a href="https://itunes.apple.com/in/app/espncricinfo-cricket/id417408017?mt=8">Cricinfo</a>.</li>
+									</ul>
+								</p>
+								<p>
+									<b>2011-2014:</b> <a href="https://services.harman.com">Symphony Services</a> 
+									<ul>
+										<li>
+											Worked on US based Movie Ticketing application (with the millions of download). Millions of requests over weekends.
+										</li>
+										<li>
+											Worked on E-mail iOS app, which provides support for IMAP, Exchange, Domino.
+										</li>
+										<li>
+											Worked on e-learning app, to support Audio, Video and PDF viewer application. 
+										</li>
+									</ul>
+								</p>
+								<p>
+									<b>2010-2011:</b> <a href="https://www.fxbytes.com">FxBytes</a>
+									<ul>
+										<li>
+											Built PDF viewer for iOS with annotations to highlight hyper-links.
+										</li>
+										<li>
+											Hired 7 developers from college and trained them on iOS development.
+										</li>
+										<li>
+											Developed social networking apps using Facebook and Twitter SDKs. 
+										</li>
+										<li>
+											Lead and manage the team of iOS developers with freelance(hostile) environment.
+										</li>
+										<li>
+											Lead the team to bid jobs in different job provider portals i.e.: Odesk/UpWork, Freelancer, Elance etc.
+										</li>
+									</ul>
+								</p>
+								<p>
+									<b>2008-2010:</b> <a href="https://www.infobeans.com">InfoBeans</a>
+									<ul>
+										<li>
+											Created my first iOS application(iWeather).
+										</li>
+										<li>Worked on different small apps i.e.: PetSupport, Soccer details app, fashion</li>
+										<li>
+											Worked on different POCs to pitch the iOS capabilities to new customers.
+										</li>
+										<li>
+											Worked on Drupal and helped building <a href="http://fivestaralliance.com">FiveStarAlliance</a>.
+										</li>
+									</ul>
+								</p>
 							</article>
 
 						<!-- About -->
@@ -334,7 +405,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Upendra Tripathi <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Upendra Tripathi</p>
 					</footer>
 
 			</div>
