--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
+			<!-- <span class="image main"><img src="images/Upendra.jpg" alt="" /></span> -->
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
 							<span class="icon fa-diamond"></span>
 						</div>
+						
 						<div class="content">
 							<div class="inner">
 								<p>Hi, I am Upendra. I like building things and meeting new people. Get in touch: <a href="https://twitter.com/uptscs">Upendra</a><br />
@@ -126,8 +127,11 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Nothing much here, but drop me a line to get in touch.</p>
+								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<p>
+									Hi, I’m Upendra Tripathi and I develop iOS applications. I started my career with Infobeans in 2008 and developed my passion for solving real world problem by developing applications. From that moment onwards I have developed around 50 applications, and was involved in numerous POCs to get clients on-board. 
+									On my spare time I love solving Indian Farmer's problems by providing the required informations and tools by conducting workshops. To contact me, please Tweet: @uptscs.
+								</p>
 							</article>
 
 						<!-- Contact -->
