--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Thanks for the visit!</title>
+		<title>I'm Upendra Tripathi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -43,26 +43,65 @@
 								<h2 class="major">Developer</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>
-									I like to improve my problem solving skills, so get in touch if you are looking for the solutions.
+									I improve my problem solving skills by solving the real world problems. So get in touch if you are looking for the solution.
 								</p>
-								<p>When I am not making magic on my desk, you're likely to find me perfecting my aim at Snooker/Pool table OR playing 'Table Tennis'. I like to hangout with awesome developers from the different teams and learn from them or just hangout.</p>
+								<p>When I am not making magic on my desk, you're likely to find me perfecting my aim at Snooker table OR playing 'Table Tennis'. I like to hangout with awesome developers from the different teams and learn from them or just hangout.</p>
+								<p>
+									I love reading books, following are some of my favorites:
+									<ul>
+										<li>
+											<b>Deep Work</b> by Cal Newport
+										</li>
+										<li>
+											<b>4DX</b> by Chris McChessny
+										</li>
+										<li>
+											<b>Outliers</b> by Malcolm Gladwell
+										</li>
+										<li>
+											<b>The Innovator's Dilemma</b> by Clayton M. Christensen
+										</li>
+										<li>
+											<b>Grit</b> by Angela Duckworth
+										</li>
+										<li>
+											<b>Willpower</b> by Roy F. Baumeister
+										</li>
+										<li>
+											<b>Average is Over</b> by Tyler Cowen
+										</li>
+										<li>
+											<b>Daily Rituals</b> by Mason Currey
+										</li>
+										<li>
+											<b>The Pragmatic Programmer</b> by Andrew Hunt
+										</li>
+										<li>
+											<b>Rapt</b> by Winifred Gallagher
+										</li>
+										<li>
+											<b>Outliers</b> by Malcolm Gladwell
+										</li>
+									</ul>
+									Drop me a line of your reading list.
+								</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Over the last 10 years I have worked with Startups and MNCs, developing iOS applications.</p>
+								<p>Here's what I've done so far</p>
 								<p>
 									<b>2015-2018:</b> <a href="https://www.oracle.com/in/index.html">Oracle</a>
 									<ul>
 									  <li>Re-factored and re-implemented <a href="https://github.com/pushio/PushIOManager_iOS">iOS Push SDK</a></li>
-									  <li>Architect and implemented Dependency Injection, Singleton and Factory appropriately, mastered multithreading, optimized SDK performance and its memory footprints. </li>
+									  <li>Designed and implemented Dependency Injection, Singleton and Factory appropriately, mastered parallel programming, optimized SDK performance and its memory footprints. </li>
 									  <li>Documented the <a href="https://docs.oracle.com/cloud/latest/marketingcs_gs/OMCFB/ios/">SDK features.</a> </li>
 									  <li>On-boarded iOS developer.</li>
-									  <li>Debug the developer issues on call support.</li>
-									  <li>#WWDC18 at San Jose.</li>
-									  <li>#WWDC17 at San Jose.</li>
+									  <li>Debug the developer issues and on call support.</li>
+									  <li>Attended #WWDC18 at San Jose.</li>
+									  <li>Attended #WWDC17 at San Jose.</li>
 									</ul>
 								</p>
 								<p>
@@ -77,13 +116,13 @@
 									<b>2011-2014:</b> <a href="https://services.harman.com">Symphony Services</a> 
 									<ul>
 										<li>
-											Worked on US based Movie Ticketing application (with the millions of download). Millions of requests over weekends.
+											Worked on Movie Ticketing application (with the millions of download).
 										</li>
 										<li>
-											Worked on E-mail iOS app, which provides support for IMAP, Exchange, Domino.
+											Worked on E-mail iOS app, which works with IMAP, Exchange, Domino.
 										</li>
 										<li>
-											Worked on e-learning app, to support Audio, Video and PDF viewer application. 
+											Worked on e-learning app with Audio player, Video player, PDF viewer to let user enjoy on-line/off-line content. 
 										</li>
 									</ul>
 								</p>
@@ -94,16 +133,13 @@
 											Built PDF viewer for iOS with annotations to highlight hyper-links.
 										</li>
 										<li>
-											Hired 7 developers from college and trained them on iOS development.
+											Hired 7 developers from different colleges and trained them as iOS developer.
 										</li>
 										<li>
 											Developed social networking apps using Facebook and Twitter SDKs. 
 										</li>
 										<li>
-											Lead and manage the team of iOS developers with freelance(hostile) environment.
-										</li>
-										<li>
-											Lead the team to bid jobs in different job provider portals i.e.: Odesk/UpWork, Freelancer, Elance etc.
+											Lead and manage the team of iOS developers in freelance(hostile) environment.
 										</li>
 									</ul>
 								</p>
@@ -113,7 +149,7 @@
 										<li>
 											Created my first iOS application(iWeather).
 										</li>
-										<li>Worked on different small apps i.e.: PetSupport, Soccer details app, fashion</li>
+										<li>Worked on different small apps i.e.: PetSupport, Soccer match report app, fashion catalog app</li>
 										<li>
 											Worked on different POCs to pitch the iOS capabilities to new customers.
 										</li>
