Readme placeholder removed

--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
 											<b>Rapt</b> by Winifred Gallagher
 										</li>
 										<li>
-											<b>Outliers</b> by Malcolm Gladwell
+											<b>Creativity Inc.</b> by Ed Catmull
+										</li>
+										<li>
+											<b>Getting Things Done</b> by David Allen
 										</li>
 									</ul>
 									Drop me a line of your reading list.
