--- a/index.html
+++ b/index.html
@@ -461,6 +461,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133661831-1"></script>
+			<script>
+  			window.dataLayer = window.dataLayer || [];
+  			function gtag(){dataLayer.push(arguments);}
+  			gtag('js', new Date());
+  			gtag('config', 'UA-133661831-1');
+			</script>
 	</body>
 </html>
