--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Here's what I've done so far</p>
+								<p>Here's what I've done so far:</p>
 								<p>
 									<b>2015-2019:</b> <a href="https://www.oracle.com/in/index.html">Oracle</a>
 									<ul>
