New Personal Web
Used new template for the personal website.

--- a/index.html
+++ b/index.html
@@ -1,430 +1,16 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>I'm Upendra Tripathi</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body>
-
-		<!-- Wrapper -->
-			<div id="wrapper">
-			<!-- <span class="image main"><img src="images/Upendra.jpg" alt="" /></span> -->
-				<!-- Header -->
-					<header id="header">
-						<div class="logo">
-							<span class="icon fa-diamond"></span>
-						</div>
-						
-						<div class="content">
-							<div class="inner">
-								<p>Hi, I am Upendra. I like building things and meeting new people. Get in touch: <a href="https://twitter.com/uptscs">Upendra</a><br />
-								</p>
-							</div>
-						</div>
-						<nav>
-							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-							</ul>
-						</nav>
-					</header>
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Developer</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>
-									I improve my problem solving skills by solving the real world problems. So get in touch if you are looking for the solution.
-								</p>
-								<p>When I am not making magic on my desk, you're likely to find me perfecting my aim at Snooker table OR playing 'Table Tennis'. I like to hangout with awesome developers from the different teams and learn from them or just hangout.</p>
-								<p>
-									I love reading books, following are some of my favorites:
-									<ul>
-										<li>
-											<b>Deep Work</b> by Cal Newport
-										</li>
-										<li>
-											<b>4DX</b> by Chris McChessny
-										</li>
-										<li>
-											<b>Outliers</b> by Malcolm Gladwell
-										</li>
-										<li>
-											<b>The Innovator's Dilemma</b> by Clayton M. Christensen
-										</li>
-										<li>
-											<b>Grit</b> by Angela Duckworth
-										</li>
-										<li>
-											<b>Willpower</b> by Roy F. Baumeister
-										</li>
-										<li>
-											<b>Average is Over</b> by Tyler Cowen
-										</li>
-										<li>
-											<b>Daily Rituals</b> by Mason Currey
-										</li>
-										<li>
-											<b>The Pragmatic Programmer</b> by Andrew Hunt
-										</li>
-										<li>
-											<b>Rapt</b> by Winifred Gallagher
-										</li>
-										<li>
-											<b>Creativity Inc.</b> by Ed Catmull
-										</li>
-										<li>
-											<b>Getting Things Done</b> by David Allen
-										</li>
-									</ul>
-									Drop me a line of your reading list.
-								</p>
-							</article>
-
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Here's what I've done so far:</p>
-								<p>
-									<b>2015-2019:</b> <a href="https://www.oracle.com/in/index.html">Oracle</a>
-									<ul>
-									  <li>Re-factored and re-implemented <a href="https://github.com/pushio/PushIOManager_iOS">iOS Push SDK</a></li>
-									  <li>Designed and implemented Dependency Injection, Singleton and Factory appropriately, mastered parallel programming, optimized SDK performance and its memory footprints. </li>
-									  <li>Documented the <a href="https://docs.oracle.com/cloud/latest/marketingcs_gs/OMCFB/ios/">SDK features.</a> </li>
-									  <li>On-boarded iOS developer.</li>
-									  <li>Debug the developer issues and on call support.</li>
-									  <li>Attended #WWDC18 at San Jose.</li>
-									  <li>Attended #WWDC17 at San Jose.</li>
-									</ul>
-								</p>
-								<p>
-									<b>2014-2015:</b> <a href="https://www.happiestminds.com">Happiest Minds</a>
-									<ul>
-										<li>Integrated the Objective-C components to C++ 3D rendering engines.</li>
-										<li>Developed iOS application which allows user to construct the 3D view rooms and add furniture to it: <a href="https://techcrunch.com/tag/loft-nedsense/">LOFT</a>.</li>
-										<li>Worked on <a href="https://itunes.apple.com/in/app/espncricinfo-cricket/id417408017?mt=8">Cricinfo</a>.</li>
-									</ul>
-								</p>
-								<p>
-									<b>2011-2014:</b> <a href="https://services.harman.com">Symphony Services</a> 
-									<ul>
-										<li>
-											Worked on Movie Ticketing application (with the millions of download).
-										</li>
-										<li>
-											Worked on E-mail iOS app, which works with IMAP, Exchange, Domino.
-										</li>
-										<li>
-											Worked on e-learning app with Audio player, Video player, PDF viewer to let user enjoy on-line/off-line content. 
-										</li>
-									</ul>
-								</p>
-								<p>
-									<b>2010-2011:</b> <a href="https://www.fxbytes.com">FxBytes</a>
-									<ul>
-										<li>
-											Built PDF viewer for iOS with annotations to highlight hyper-links.
-										</li>
-										<li>
-											Hired 7 developers from different colleges and trained them as iOS developer.
-										</li>
-										<li>
-											Developed social networking apps using Facebook and Twitter SDKs. 
-										</li>
-										<li>
-											Lead and manage the team of iOS developers in freelance(hostile) environment.
-										</li>
-									</ul>
-								</p>
-								<p>
-									<b>2008-2010:</b> <a href="https://www.infobeans.com">InfoBeans</a>
-									<ul>
-										<li>
-											Created my first iOS application(iWeather).
-										</li>
-										<li>Worked on different small apps i.e.: PetSupport, Soccer match report app, fashion catalog app</li>
-										<li>
-											Worked on different POCs to pitch the iOS capabilities to new customers.
-										</li>
-										<li>
-											Worked on Drupal and helped building <a href="http://fivestaralliance.com">FiveStarAlliance</a>.
-										</li>
-									</ul>
-								</p>
-							</article>
-
-						<!-- Elements -->
-							<article id="elements">
-								<h2 class="major">Elements</h2>
-
-								<section>
-									<h3 class="major">Text</h3>
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<h6>Heading Level 6</h6>
-									<hr />
-									<h4>Blockquote</h4>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-									<h4>Preformatted</h4>
-									<pre><code>i = 0;
-
-while (!deck.isInOrder()) {
-    print 'Iteration ' + i;
-    deck.shuffle();
-    i++;
-}
-
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
-								</section>
-
-								<section>
-									<h3 class="major">Lists</h3>
-
-									<h4>Unordered</h4>
-									<ul>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Alternate</h4>
-									<ul class="alt">
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Ordered</h4>
-									<ol>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis viverra.</li>
-										<li>Felis enim feugiat.</li>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis lorem.</li>
-										<li>Felis enim et feugiat.</li>
-									</ol>
-									<h4>Icons</h4>
-									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-									</ul>
-
-									<h4>Actions</h4>
-									<ul class="actions">
-										<li><a href="#" class="button special">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions vertical">
-										<li><a href="#" class="button special">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Table</h3>
-									<h4>Default</h4>
-									<div class="table-wrapper">
-										<table>
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-
-									<h4>Alternate</h4>
-									<div class="table-wrapper">
-										<table class="alt">
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-								</section>
-
-								<section>
-									<h3 class="major">Buttons</h3>
-									<ul class="actions">
-										<li><a href="#" class="button special">Special</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button">Default</a></li>
-										<li><a href="#" class="button small">Small</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button special icon fa-download">Icon</a></li>
-										<li><a href="#" class="button icon fa-download">Icon</a></li>
-									</ul>
-									<ul class="actions">
-										<li><span class="button special disabled">Disabled</span></li>
-										<li><span class="button disabled">Disabled</span></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Form</h3>
-									<form method="post" action="#">
-										<div class="field half first">
-											<label for="demo-name">Name</label>
-											<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
-										</div>
-										<div class="field half">
-											<label for="demo-email">Email</label>
-											<input type="email" name="demo-email" id="demo-email" value="" placeholder="uptscs@gmail.com" />
-										</div>
-										<div class="field">
-											<label for="demo-category">Category</label>
-											<div class="select-wrapper">
-												<select name="demo-category" id="demo-category">
-													<option value="">-</option>
-													<option value="1">Manufacturing</option>
-													<option value="1">Shipping</option>
-													<option value="1">Administration</option>
-													<option value="1">Human Resources</option>
-												</select>
-											</div>
-										</div>
-										<div class="field half first">
-											<input type="radio" id="demo-priority-low" name="demo-priority" checked>
-											<label for="demo-priority-low">Low</label>
-										</div>
-										<div class="field half">
-											<input type="radio" id="demo-priority-high" name="demo-priority">
-											<label for="demo-priority-high">High</label>
-										</div>
-										<div class="field half first">
-											<input type="checkbox" id="demo-copy" name="demo-copy">
-											<label for="demo-copy">Email me a copy</label>
-										</div>
-										<div class="field half">
-											<input type="checkbox" id="demo-human" name="demo-human" checked>
-											<label for="demo-human">Not a robot</label>
-										</div>
-										<div class="field">
-											<label for="demo-message">Message</label>
-											<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" class="special" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
-								</section>
-
-							</article>
-
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<p class="copyright">&copy; Upendra Tripathi</p>
-					</footer>
-
-			</div>
-
-		<!-- BG -->
-			<div id="bg"></div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133661831-1"></script>
-			<script>
-  			window.dataLayer = window.dataLayer || [];
-  			function gtag(){dataLayer.push(arguments);}
-  			gtag('js', new Date());
-  			gtag('config', 'UA-133661831-1');
-			</script>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Upendra Tripathi</title>
+  </head>
+  <body>
+    <script type="application/json" id="my-template-data">
+{"name":"Upendra Tripathi","socialLinks":["https://github.com/uptscs","https://twitter.com/uptscs","https://www.linkedin.com/in/upendratripathi/"],"devToUserId":"uptscs","primaryColor":"indigo","products":[{"title":"Deep Work","description":"A mobile app to measure the time spent in deep state of mind in days, weeks, months and years.","image":"https://i.pinimg.com/originals/50/37/ab/5037abba9a9551f5daa942e8c234c29e.jpg","tags":["SwiftUI","Swift","Xcode"],"links":["https://github.com/uptscs","https://twitter.com/uptscs","https://www.linkedin.com/in/upendratripathi/"]}],"repositories":["uptscs"]}
+    </script>
+    <div id="root"></div>
+    <script src="https://cdn.jsdelivr.net/npm/mytemplate.xyz@0.4.1/build/Index.js"></script>
+  </body>
 </html>
